# legacy-use

./: .gitignore  .pre-commit-config.yaml  .vulture.toml  CLAUDE.md  CONTRIBUTING.md  DOCKER_COMPOSE.md  Makefile  README.md  Tiltfile  build_all_docker.sh  build_docker.sh  docker-compose.mcp.yml  docker-compose.yml  kind-config.yaml  package-lock.json  package.json  pyproject.toml  start_docker_compose.sh  test_api_status.py  vite.config.js
.github/workflows/: code-quality.yml  docker-build.yml
app/: App.jsx  index.jsx
app/components/: ApiList.jsx  CreateTarget.jsx  Dashboard.jsx  JobStatusCard.jsx  JobsList.jsx  JobsSection.jsx  LogViewer.jsx  OnboardingWizard.jsx  TargetInfoCard.jsx  TargetList.jsx  VncViewer.jsx
app/contexts/: AiProviderContext.jsx  ApiKeyContext.jsx
app/services/: apiService.jsx
docs/: SECRETS_MANAGEMENT.md  kind-kubevirt.md  kind-tilt-development.md  kubernetes-deployment.md  scaling-guide.md
helm/: Chart.yaml  README.md  WINE_QUICKSTART.md  values-android.yaml  values-linux.yaml  values-mcp.yaml  values-production.yaml  values-windows-example.yaml  values-wine.yaml  values.yaml
helm/templates/: android-target-deployment.yaml  android-target-pvc.yaml  android-target-service.yaml  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  linux-target-deployment.yaml  linux-target-service.yaml  mcp-server-deployment.yaml  mcp-server-service.yaml  serviceaccount.yaml  windows-target-service.yaml  windows-target-statefulset.yaml  wine-target-deployment.yaml  wine-target-pvc.yaml  wine-target-service.yaml
infra/docker/legacy-use-android-aind-target/: Dockerfile
infra/docker/legacy-use-android-target/: Dockerfile  README.md  supervisor-logging.conf  supervisord-base-override.conf
infra/docker/legacy-use-backend/: Dockerfile
infra/helm/: Chart.yaml  README.md  WINE_QUICKSTART.md  values-android-aind.yaml  values-dev.yaml  values-linux.yaml  values-mcp.yaml  values-minimal.yaml  values-production.yaml  values-tilt.yaml  values-windows-example.yaml  values-windows-kubevirt.yaml  values-windows10-example.yaml  values-wine.yaml  values.yaml
mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  claude-desktop-config.md  pyproject.toml  test_server.py
mcp-server/src/: __init__.py  __main__.py  api_executor.py  converter.py  database.py  server.py  simple_server.py
scripts/: build-and-push.sh  check-kubevirt.sh  kind-setup.sh  kind-teardown.sh  preload-vm-images.sh  tilt-down.sh  tilt-up.sh  windows-kubevirt-setup.sh
server/: core.py  server.py  settings.py
server/computer_use/: client.py  sampling_loop.py  utils.py
server/database/: models.py  service.py
server/models/: base.py
server/routes/: api.py  containers.py  jobs.py  sessions.py  settings.py  targets.py  vnc.py
server/utils/: auth.py  container_orchestrator.py  container_pool.py  docker_manager.py  docker_orchestrator.py  job_execution.py  kubernetes_orchestrator.py  orchestrator_utils.py  prompt_loader.py  session_monitor.py
vm-images/: README.md  build-vm-images.sh  download-images.sh
vm-images/macos-mojave/: Dockerfile  Dockerfile.opencore  Dockerfile.ovmf-code  Dockerfile.ovmf-vars  README.md  build-macos-disks.sh
vm-images/windows-10/: Dockerfile
vm-images/windows-xp/: Dockerfile
vm-images/windows-xp-driver/: Dockerfile
(+108 files in other folders)
